# rustris

./: Cargo.toml  README.md
src/: collision_checker.rs  game_state.rs  main.rs  normal.rs  shader_program.rs  state_renderer.rs  tetronimoe.rs  texture_bag.rs  vertex.rs
